syntax = "proto3";
package proto;

import "FileInfo.proto";
import "OpenFile.proto";
import "defs.proto";
import "Histogram.proto";
import "ImageData.proto";
import "SpectralProfile.proto";


//Service defintions for HDF5 readers
service H5Readers{
  rpc CheckStatus(Empty) returns  (StatusResponse) {}
  rpc OpenFile(OpenFileRequest) returns (StatusResponse) {}
  rpc CloseFile(FileCloseRequest) returns (StatusResponse) {}
  rpc GetFileInfo (FileInfoRequest) returns (FileInfoResponse) {}
  rpc GetImageDataStream (ImageDataRequest) returns (stream ImageDataResponse) {}
  rpc GetSpectralProfile (SpectralProfileReaderRequest) returns (SpectralProfileReaderResponse) {}
  rpc GetHistogram (HistogramRequest) returns (HistogramResponse) {}
}

